Add Order Status endpoint /api/trade/orders-status
